fix(condo): DOMA-5427 Minify name of cost item and categories. Convert to upper case

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1580,62 +1580,62 @@
   "billing.category.telecom.name": "Telecom",
   "banking.integration.SBBOL.name": "SBBOL",
   "banking.integration.1CClientBankExchange.name": "1C",
-  "banking.category.maintenance_and_current_repair_of_common_property_in_an_apartment_building.name": "Maintenance and current repair of common property in an apartment building",
-  "banking.category.apartment_building_management.name": "Apartment building management",
-  "banking.category.overhaul.name": "Overhaul",
-  "banking.category.drainage.name": "Drainage",
-  "banking.category.water_supply.name": "Water supply",
-  "banking.category.garbage_collection_and_disposal.name": "Garbage collection and disposal",
-  "banking.category.gas.name": "Gas",
-  "banking.category.hot_water_supply.name": "Hot water supply",
-  "banking.category.additional_services.name": "Additional services",
-  "banking.category.thermal_energy.name": "Thermal energy",
-  "banking.category.cold_water_supply.name": "Cold water supply",
-  "banking.category.electric_energy.name": "Electric energy",
-  "banking.costItem.emergency_service.name": "Emergency service",
-  "banking.costItem.rent.name": "Rent",
-  "banking.costItem.banking_services.name": "Banking services",
-  "banking.costItem.maintenance_and_operation.name": "Maintenance and operation",
-  "banking.costItem.overhaul.name": "Overhaul",
-  "banking.costItem.water_supply.name": "Water supply",
-  "banking.costItem.compensation_for_damage.name": "Compensation for damage",
-  "banking.costItem.garbage_collection_and_disposal.name": "Garbage collection and disposal",
-  "banking.costItem.gas.name": "Gas",
-  "banking.costItem.deratization_and_disinfestation.name": "Deratization and disinfestation",
-  "banking.costItem.materials_for_repair_and_maintenance.name": "Materials for repair and maintenance",
-  "banking.costItem.purchase_of_machinery_and_equipment.name": "Purchase of machinery and equipment",
-  "banking.costItem.employee_wages.name": "Employee wages",
-  "banking.costItem.rental_fee.name": "Rental fee",
-  "banking.costItem.concierges.name": "Concierges",
-  "banking.costItem.materials_for_maintenance_and_current_repair.name": "Materials for maintenance and current repair",
-  "banking.costItem.taxes.name": "Taxes",
-  "banking.costItem.equipment.name": "Equipment",
-  "banking.costItem.maintenance_of_access_control_systems.name": "Maintenance of access control systems",
-  "banking.costItem.intercom_service.name": "Intercom service",
-  "banking.costItem.maintenance_and_inspection_of_metering_devices.name": "Maintenance and inspection of metering devices",
-  "banking.costItem.maintenance_of_elevator_equipment.name": "Maintenance of elevator equipment",
-  "banking.costItem.maintenance_of_fireplaces_and_hearths.name": "Maintenance of fireplaces and hearths",
-  "banking.costItem.maintenance_of_ventilation_systems.name": "Maintenance of ventilation systems",
-  "banking.costItem.maintenance_of_video_surveillance_systems.name": "Maintenance of video surveillance systems",
-  "banking.costItem.domestic_gas_equipment.name": "Domestic gas equipment",
-  "banking.costItem.maintenance_of_water_supply_systems_cold_and_hot_heating_and_sanitation.name": "Maintenance of water supply systems (cold and hot), heating and sanitation",
-  "banking.costItem.security.name": "Security",
-  "banking.costItem.services_for_interaction_with_owners_and_citizens.name": "Services for interaction with owners and citizens",
-  "banking.costItem.other_maintenance.name": "Other maintenance",
-  "banking.costItem.other_management_services.name": "Other management services",
-  "banking.costItem.radio_point.name": "Radio point",
-  "banking.costItem.current_repair_of_structural_elements_of_an_apartment_building.name": "Current repair of structural elements of an apartment building",
-  "banking.costItem.tv.name": "TV",
-  "banking.costItem.thermal_energy.name": "Thermal energy",
-  "banking.costItem.transport.name": "Transport",
-  "banking.costItem.cleaning.name": "Cleaning",
-  "banking.costItem.house_area_cleaning.name": "House area cleaning",
-  "banking.costItem.residential_and_utility_billing_services.name": "Residential and utility billing services",
-  "banking.costItem.finance_and_accounting.name": "Finance and accounting",
-  "banking.costItem.targeted_fees.name": "Targeted fees",
-  "banking.costItem.fines_of_state_regulatory_bodies.name": "Fines of state regulatory bodies",
-  "banking.costItem.electric_energy.name": "Electric energy",
-  "banking.costItem.legal_services.name": "Legal services",
-  "banking.costItem.debt_collection.name": "Debt collection",
-  "banking.costItem.drainage.name": "Drainage"
+  "banking.category.MAINTENANCE_APARTMENT_BUILDING.name": "Maintenance and current repair of common property in an apartment building",
+  "banking.category.APARTMENT_BUILDING_MANAGEMENT.name": "Apartment building management",
+  "banking.category.OVERHAUL.name": "Overhaul",
+  "banking.category.DRAINAGE.name": "Drainage",
+  "banking.category.WATER_SUPPLY.name": "Water supply",
+  "banking.category.GARBAGE_COLLECTION.name": "Garbage collection and disposal",
+  "banking.category.GAS.name": "Gas",
+  "banking.category.HOT_WATER_SUPPLY.name": "Hot water supply",
+  "banking.category.ADDITIONAL_SERVICES.name": "Additional services",
+  "banking.category.THERMAL_ENERGY.name": "Thermal energy",
+  "banking.category.COLD_WATER_SUPPLY.name": "Cold water supply",
+  "banking.category.ELECTRIC_ENERGY.name": "Electric energy",
+  "banking.costItem.EMERGENCY_SERVICE.name": "Emergency service",
+  "banking.costItem.RENT.name": "Rent",
+  "banking.costItem.BANKING_SERVICES.name": "Banking services",
+  "banking.costItem.MAINTENANCE_AND_OPERATION.name": "Maintenance and operation",
+  "banking.costItem.OVERHAUL.name": "Overhaul",
+  "banking.costItem.WATER_SUPPLY.name": "Water supply",
+  "banking.costItem.COMPENSATION_FOR_DAMAGE.name": "Compensation for damage",
+  "banking.costItem.GARBAGE_COLLECTION.name": "Garbage collection and disposal",
+  "banking.costItem.GAS.name": "Gas",
+  "banking.costItem.DERATIZATION_AND_DISINFESTATION.name": "Deratization and disinfestation",
+  "banking.costItem.MATERIALS_FOR_MAINTENANCE.name": "Materials for repair and maintenance",
+  "banking.costItem.PURCHASE_EQUIPMENT.name": "Purchase of machinery and equipment",
+  "banking.costItem.EMPLOYEE_SALARY.name": "Employee wages",
+  "banking.costItem.RENTAL_FEE.name": "Rental fee",
+  "banking.costItem.CONCIERGES.name": "Concierges",
+  "banking.costItem.MATERIALS_FOR_REPAIR.name": "Materials for maintenance and current repair",
+  "banking.costItem.TAXES.name": "Taxes",
+  "banking.costItem.EQUIPMENT.name": "Equipment",
+  "banking.costItem.ACCESS_CONTROL_SYSTEMS.name": "Maintenance of access control systems",
+  "banking.costItem.INTERCOM_SERVICE.name": "Intercom service",
+  "banking.costItem.MAINTENANCE_METERING_DEVICES.name": "Maintenance and inspection of metering devices",
+  "banking.costItem.MAINTENANCE_ELEVATOR.name": "Maintenance of elevator equipment",
+  "banking.costItem.MAINTENANCE_FIREPLACES.name": "Maintenance of fireplaces and hearths",
+  "banking.costItem.MAINTENANCE_VENTILATION.name": "Maintenance of ventilation systems",
+  "banking.costItem.MAINTENANCE_CCTV.name": "Maintenance of video surveillance systems",
+  "banking.costItem.DOMESTIC_GAS_EQUIPMENT.name": "Domestic gas equipment",
+  "banking.costItem.MAINTENANCE_WATER_SUPPLY.name": "Maintenance of water supply systems (cold and hot), heating and sanitation",
+  "banking.costItem.SECURITY.name": "Security",
+  "banking.costItem.SERVICES_FOR_OWNERS.name": "Services for interaction with owners and citizens",
+  "banking.costItem.OTHER_MAINTENANCE.name": "Other maintenance",
+  "banking.costItem.OTHER_MANAGEMENT_SERVICES.name": "Other management services",
+  "banking.costItem.RADIO_POINT.name": "Radio point",
+  "banking.costItem.REPAIR_APARTMENT_BUILDING.name": "Current repair of structural elements of an apartment building",
+  "banking.costItem.TV.name": "TV",
+  "banking.costItem.THERMAL_ENERGY.name": "Thermal energy",
+  "banking.costItem.TRANSPORT.name": "Transport",
+  "banking.costItem.CLEANING.name": "Cleaning",
+  "banking.costItem.HOUSE_AREA_CLEANING.name": "House area cleaning",
+  "banking.costItem.BILLING_SERVICES.name": "Residential and utility billing services",
+  "banking.costItem.FINANCE_AND_ACCOUNTING.name": "Finance and accounting",
+  "banking.costItem.TARGETED_FEES.name": "Targeted fees",
+  "banking.costItem.STATE_FINES.name": "Fines of state regulatory bodies",
+  "banking.costItem.ELECTRIC_ENERGY.name": "Electric energy",
+  "banking.costItem.LEGAL_SERVICES.name": "Legal services",
+  "banking.costItem.DEBT_COLLECTION.name": "Debt collection",
+  "banking.costItem.DRAINAGE.name": "Drainage"
 }
