feat(condo): DOMA-5441 Merged billing and payments sections

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -168,6 +168,7 @@
   "LoadingInProgress": "Loading in progress…",
   "NotFound": "Not found",
   "Logout": "Logout",
+  "global.section.accrualsAndPayments": "Accruals and payments",
   "global.section.analytics": "Analytics",
   "global.section.onBoarding": "Where to begin?",
   "global.section.controlRoom": "Control Room",
@@ -176,9 +177,7 @@
   "global.section.employees": "Employees",
   "global.section.contacts": "Contacts",
   "global.section.settings": "Settings",
-  "global.section.billing": "Billing",
   "global.section.meters": "Meters log",
-  "global.section.payments": "Payments",
   "global.section.miniapps": "Services",
   "global.available": "Available",
   "global.notAvailable": "Not available",
@@ -1307,7 +1306,7 @@
   "pages.billing.NoBilling.button": "View list of integrations",
   "WillBeReadySoon": "Everything will be ready soon",
   "Accruals": "Accruals",
-  "Meters": "Meters",
+  "Payments": "Payments",
   "DataFor": "Data for",
   "FeatureFlags.Modal.Title": "Feature Flags menu",
   "FeatureFlags.Modal.Description": "Any changes made here would apply only after reload",
