--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -168,6 +168,7 @@
   "LoadingInProgress": "Идет загрузка…",
   "NotFound": "Не найдено",
   "Logout": "Выйти",
+  "global.section.accrualsAndPayments": "Начисления и оплаты",
   "global.section.analytics": "Аналитика",
   "global.section.onBoarding": "С чего начать?",
   "global.section.controlRoom": "Диспетчерская",
@@ -176,9 +177,7 @@
   "global.section.employees": "Сотрудники",
   "global.section.contacts": "Жители",
   "global.section.settings": "Настройки",
-  "global.section.billing": "Биллинг",
   "global.section.meters": "ИПУ",
-  "global.section.payments": "Реестр оплат",
   "global.section.miniapps": "Сервисы",
   "global.available": "Есть",
   "global.notAvailable": "Отсутствует",
@@ -1307,7 +1306,7 @@
   "pages.billing.NoBilling.button": "Посмотреть список интеграций",
   "WillBeReadySoon": "Скоро всё будет готово",
   "Accruals": "Начисления",
-  "Meters": "ИПУ",
+  "Payments": "Оплаты",
   "DataFor": "Данные за",
   "FeatureFlags.Modal.Title": "Флаги функций",
   "FeatureFlags.Modal.Description": "Все изменения будут применены только после перезагрузки страницы",
