--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -797,6 +797,7 @@
   "pages.condo.settings.propertyScope.form.alert.descriptionLink": "Перейти к списку сотрудников",
   "pages.condo.settings.propertyScope.alert.delete.Title": "Удалить область видимости?",
   "pages.condo.settings.propertyScope.alert.delete.Message": "Восстановить будет невозможно. Но можно будет создать снова.",
+  "pages.condo.settings.common.title": "Общие",
   "pages.index.PageTitle": "Аналитика",
   "pages.organizations.CreateOrganizationMessage": "Давайте создадим вашу управляющую компанию",
   "pages.condo.analytics.index.PageTitle": "Аналитика для руководителей",
