feat(condo): DOMA-5170 removed negative paid field

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -105,7 +105,6 @@
   "field.Executor.description": "The executor is an employee who will fix the problem described in the task",
   "field.FlatNumber": "Unit",
   "field.Holder": "Holder",
-  "field.Paid": "Paid",
   "field.ShortFlatNumber": "fl.",
   "field.sectionType.section": "Section",
   "field.sectionType.parking": "Parking",
@@ -1320,6 +1319,7 @@
   "DataWasUploadedOnSuffix": " at",
   "DebtOverpayment": "Debt/Overpayment",
   "PaymentPenalty": "Penalty",
+  "PaymentPaid": "Paid",
   "PaymentType": "Type",
   "PaymentOrder": "Payment order",
   "PaymentOrderShort": "P/O",
