--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -105,7 +105,6 @@
   "field.Executor.description": "Исполнитель — это сотрудник, который будет устранять проблему, описанную в заявке",
   "field.FlatNumber": "Помещение",
   "field.Holder": "Собственник",
-  "field.Paid": "Оплачено",
   "field.ShortFlatNumber": "кв.",
   "field.sectionType.section": "Подъезд",
   "field.sectionType.parking": "Паркинг",
@@ -1320,6 +1319,7 @@
   "DataWasUploadedOnSuffix": ", в",
   "DebtOverpayment": "Долг/Переплата",
   "PaymentPenalty": "Пени",
+  "PaymentPaid": "Оплачено",
   "PaymentType": "Тип",
   "PaymentOrder": "Платежное поручение",
   "PaymentOrderShort": "П/П",
