feat(condo): DOMA-5438 translations for settings table

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -798,6 +798,9 @@
   "pages.condo.settings.propertyScope.alert.delete.Title": "Delete property scope?",
   "pages.condo.settings.propertyScope.alert.delete.Message": "It will be impossible to restore. But it will be possible to create again.",
   "pages.condo.settings.common.title": "Common",
+  "pages.condo.settings.common.settingName": "Settings",
+  "pages.condo.settings.common.settingValue": "Value",
+  "pages.condo.settings.common.interfaceLanguage": "Language",
   "pages.index.PageTitle": "Analytics",
   "pages.organizations.CreateOrganizationMessage": "Creating new organization",
   "pages.condo.analytics.index.PageTitle": "Analytics for supervisors",
