--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -798,6 +798,9 @@
   "pages.condo.settings.propertyScope.alert.delete.Title": "Удалить область видимости?",
   "pages.condo.settings.propertyScope.alert.delete.Message": "Восстановить будет невозможно. Но можно будет создать снова.",
   "pages.condo.settings.common.title": "Общие",
+  "pages.condo.settings.common.settingName": "Настройка",
+  "pages.condo.settings.common.settingValue": "Значение",
+  "pages.condo.settings.common.interfaceLanguage": "Язык интерфейса",
   "pages.index.PageTitle": "Аналитика",
   "pages.organizations.CreateOrganizationMessage": "Давайте создадим вашу управляющую компанию",
   "pages.condo.analytics.index.PageTitle": "Аналитика для руководителей",
