feat(condo): DOMA-5438 translations for languages

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1,4 +1,6 @@
 {
+  "language.russian": "Russian",
+  "language.english-us": "U.S. English",
   "Accept": "Accept",
   "AccessError": "You don't have access to complete this request",
   "Add": "Add",
