--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1,4 +1,6 @@
 {
+  "language.russian": "Русский",
+  "language.english-us": "Английский",
   "Accept": "Принять",
   "AccessError": "У вас нет доступа для выполнения данного запроса",
   "Add": "Добавить",
