--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1,6 +1,6 @@
 {
-  "language.russian": "Russian",
-  "language.english-us": "U.S. English",
+  "language.russian.withFlag": "🇷🇺\u00a0Russian",
+  "language.english-us.withFlag": "🇺🇸\u00a0U.S. English",
   "Accept": "Accept",
   "AccessError": "You don't have access to complete this request",
   "Add": "Add",
