fix(condo): DOMA-5438 fix languages translations

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1,5 +1,5 @@
 {
-  "language.russian.withFlag": "🇷🇺\u00a0Russian",
+  "language.russian.withFlag": "🇷🇺\u00a0Русский",
   "language.english-us.withFlag": "🇺🇸\u00a0U.S. English",
   "Accept": "Accept",
   "AccessError": "You don't have access to complete this request",
