--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1,6 +1,6 @@
 {
   "language.russian.withFlag": "🇷🇺\u00a0Русский",
-  "language.english-us.withFlag": "🇺🇸\u00a0Английский",
+  "language.english-us.withFlag": "🇺🇸\u00a0U.S. English",
   "Accept": "Принять",
   "AccessError": "У вас нет доступа для выполнения данного запроса",
   "Add": "Добавить",
