feat(condo): DOMA-3963 implementation of recurrent-payment-notification task

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1158,6 +1158,7 @@
   "notification.messages.VOIP_INCOMING_CALL_MESSAGE.push.title": "{title}",
   "notification.messages.RECURRENT_PAYMENT_PROCEEDING_SUCCESS_RESULT_MESSAGE.push.title": "Bills were successfully paid",
   "notification.messages.RECURRENT_PAYMENT_PROCEEDING_FAILURE_RESULT_MESSAGE.push.title": "Failed to pay for bills",
+  "notification.messages.RECURRENT_PAYMENT_TOMORROW_PAYMENT_MESSAGE.push.title": "Automatic payment of receipts scheduled for tomorrow",
   "TicketDeadline": "Ticket deadline",
   "TicketDeferredDeadline": "Ticket deferred deadline",
   "ticket.EmptyList.header": "The list of applications is still empty",
