--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1158,6 +1158,7 @@
   "notification.messages.VOIP_INCOMING_CALL_MESSAGE.push.title": "{title}",
   "notification.messages.RECURRENT_PAYMENT_PROCEEDING_SUCCESS_RESULT_MESSAGE.push.title": "Автоплатеж обработан успешно",
   "notification.messages.RECURRENT_PAYMENT_PROCEEDING_FAILURE_RESULT_MESSAGE.push.title": "Возникла проблема с оплатой",
+  "notification.messages.RECURRENT_PAYMENT_TOMORROW_PAYMENT_MESSAGE.push.title": "Автоматическая оплата квитанций запланирована на завтра",
   "TicketDeadline": "Срок выполнения заявки",
   "TicketDeferredDeadline": "Срок отложенности заявки",
   "ticket.EmptyList.header": "Список заявок пока пуст",
