feat(condo): DOMA-5525 favorite tickets

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -606,6 +606,9 @@
   "pages.condo.ticket.filters.EnterFullName": "Enter full name",
   "pages.condo.ticket.filters.EnterOrganization": "Enter full name",
   "pages.condo.ticket.filters.SelectOrganization": "Choose an organization",
+  "pages.condo.ticket.filters.TicketType": "Ticket type",
+  "pages.condo.ticket.filters.TicketType.common": "Common",
+  "pages.condo.ticket.filters.TicketType.favorite": "Favorite",
   "pages.condo.ticket.filters.Organization": "Organization",
   "pages.condo.ticket.filters.isResidentContact": "Resident/Not resident",
   "pages.condo.ticket.filters.isResidentContact.true": "resident",
