--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -606,6 +606,9 @@
   "pages.condo.ticket.filters.EnterFullName": "Введите ФИО",
   "pages.condo.ticket.filters.EnterOrganization": "Введите организацию",
   "pages.condo.ticket.filters.SelectOrganization": "Выберите организацию",
+  "pages.condo.ticket.filters.TicketType": "Тип заявки",
+  "pages.condo.ticket.filters.TicketType.common": "Обычные",
+  "pages.condo.ticket.filters.TicketType.favorite": "Избранные",
   "pages.condo.ticket.filters.Organization": "Организация",
   "pages.condo.ticket.filters.isResidentContact": "Житель/не житель",
   "pages.condo.ticket.filters.isResidentContact.true": "Житель",
