fix(condo): DOMA-5394 wrong translation

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -882,7 +882,7 @@
   "employee.Position": "Position",
   "employee.Specializations": "Specializations",
   "employee.Role": "Role",
-  "employee.Role.whoIs": "Кто такой {roleName}",
+  "employee.Role.whoIs": "Who is {roleName}",
   "employee.AddEmployee": "Add employee",
   "employee.AllSpecializations": "all specializations",
   "employee.SpecializationsCount": "and more specializations: ",
