fix(condo): DOMA-5394 support unicode names

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -316,9 +316,9 @@
   "pages.auth.PleaseConfirmYourPassword": "Please confirm your password",
   "pages.auth.PleaseInputYourEmail": "Please input your Email",
   "pages.auth.PleaseInputYourName": "Please input your Name",
-  "pages.auth.NameContainsOnly": "Name can only consist of latin and cyrillic letters",
-  "pages.auth.NameMustContain": "Name must contain at least one letter",
-  "pages.auth.NameMustNotStartOrAnd": "Name must not start or and with -'’`",
+  "pages.auth.NameContainsOnly": "The name can contain only letters",
+  "pages.auth.NameMustContain": "The name must contain at least one letter",
+  "pages.auth.NameMustNotStartOrAnd": "The name must not start or end with hyphen",
   "pages.auth.PleaseInputYourPassword": "Please input your Password",
   "pages.auth.Register": "Register",
   "pages.auth.register.AllFieldsAreRequired": "All fields are required",
