--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -316,9 +316,9 @@
   "pages.auth.PleaseConfirmYourPassword": "Введите пароль повторно для подтверждения",
   "pages.auth.PleaseInputYourEmail": "Введите Эл. почту",
   "pages.auth.PleaseInputYourName": "Введите имя",
-  "pages.auth.NameContainsOnly": "Имя может состоять только из латинских и русских букв",
+  "pages.auth.NameContainsOnly": "Имя может состоять только из букв",
   "pages.auth.NameMustContain": "Имя должно содержать хотя бы одну букву",
-  "pages.auth.NameMustNotStartOrAnd": "Имя не может начинаться или заканчиваться -'’`",
+  "pages.auth.NameMustNotStartOrAnd": "Имя не может начинаться или заканчиваться дефисом",
   "pages.auth.PleaseInputYourPassword": "Введите пароль",
   "pages.auth.Register": "Зарегистрироваться",
   "pages.auth.register.AllFieldsAreRequired": "Все поля обязательны для заполнения",
