feat(condo): DOMA-3799 smart control room

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -572,6 +572,8 @@
   "pages.condo.ticket.alert.NoProperties": "To create ticket, you need to add at least one address in the section «Buildings».",
   "pages.condo.ticket.autoAssignAlert.title": "Responsible and executor assigned automatically",
   "pages.condo.ticket.autoAssignAlert.message": "The property from this ticket is within the property scope of «{name}». Therefore, the Domá algorithm automatically assigned the assignee and the executor.",
+  "pages.condo.ticket.favorite.addToFavorite": "Add to favorite",
+  "pages.condo.ticket.favorite.removeFromFavorite": "Remove from favorite",
   "pages.condo.ticket.field.EmployeeIsNullOrWasDeleted": "Employee is not specified or has been deleted",
   "pages.condo.ticket.field.CanReadByResident": "display ticket in mobile resident app",
   "pages.condo.ticket.field.ResidentClient": "Client (resident)",
@@ -607,7 +609,8 @@
   "pages.condo.ticket.filters.EnterOrganization": "Enter full name",
   "pages.condo.ticket.filters.SelectOrganization": "Choose an organization",
   "pages.condo.ticket.filters.TicketType": "Ticket type",
-  "pages.condo.ticket.filters.TicketType.common": "Common",
+  "pages.condo.ticket.filters.TicketType.all": "All",
+  "pages.condo.ticket.filters.TicketType.own": "Own",
   "pages.condo.ticket.filters.TicketType.favorite": "Favorite",
   "pages.condo.ticket.filters.Organization": "Organization",
   "pages.condo.ticket.filters.isResidentContact": "Resident/Not resident",
@@ -644,7 +647,7 @@
   "pages.condo.ticket.index.EmergenciesLabel": "Emergency",
   "pages.condo.ticket.index.WarrantiesLabel": "Warranty",
   "pages.condo.ticket.index.ReturnedLabel": "Returned",
-  "pages.condo.ticket.index.PageTitle": "All tickets",
+  "pages.condo.ticket.index.PageTitle": "Tickets",
   "pages.condo.ticket.index.PaidLabel": "Paid",
   "pages.condo.ticket.index.ResetFilters": "Reset",
   "pages.condo.ticket.index.CancelSelectedTicket": "Deselect",
@@ -1173,6 +1176,12 @@
   "ticket.status.DEFERRED.name": "Deferred",
   "ticket.status.DEFERRED.until.name": "Deferred until {deferredUntil}",
   "ticket.status.CLOSED.name": "Closed",
+  "ticket.status.OPEN.many": "Open",
+  "ticket.status.IN_PROGRESS.many": "In progress",
+  "ticket.status.DECLINED.many": "Declined",
+  "ticket.status.COMPLETED.many": "Completed",
+  "ticket.status.DEFERRED.many": "Deferred",
+  "ticket.status.CLOSED.many": "Closed",
   "ticket.source.EMAIL.name": "E-mail",
   "ticket.source.MOBILE_APP.name": "Resident mobile app",
   "ticket.source.REMOTE_SYSTEM.name": "Government portal",
@@ -1357,6 +1366,7 @@
   "Contact.NotFound.Message": "There is no contact with this ID or it doesn't belong to this organization",
   "Contact": "Contact",
   "TicketsByContact": "Contact's tickets",
+  "TicketsCount": "{ticketsCount, plural, one {# ticket} few {# tickets} other {# tickets}}",
   "MoreTicketsLeft": "And {ticketsLeft, plural, one {# more ticket} other {# more tickets}}",
   "Contact.NoTicketOnAddress": "There is no tickets from the contact at this address",
   "EditingContact": "Editing contact",
