--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -572,6 +572,8 @@
   "pages.condo.ticket.alert.NoProperties": "Чтобы создать заявку, добавьте хотя бы один адрес в разделе «Дома».",
   "pages.condo.ticket.autoAssignAlert.title": "Ответственный и исполнитель назначены автоматически",
   "pages.condo.ticket.autoAssignAlert.message": "Дом из этой заявки входит в область видимости «{name}». Поэтому алгоритм Домá автоматически назначил ответственного и исполнителя.",
+  "pages.condo.ticket.favorite.addToFavorite": "Добавить в избранное",
+  "pages.condo.ticket.favorite.removeFromFavorite": "Убрать из избранного",
   "pages.condo.ticket.field.EmployeeIsNullOrWasDeleted": "Сотрудник не указан или был удален",
   "pages.condo.ticket.field.CanReadByResident": "отображать заявку в моб. приложении жителя",
   "pages.condo.ticket.field.ResidentClient": "Заявитель (житель)",
@@ -607,7 +609,8 @@
   "pages.condo.ticket.filters.EnterOrganization": "Введите организацию",
   "pages.condo.ticket.filters.SelectOrganization": "Выберите организацию",
   "pages.condo.ticket.filters.TicketType": "Тип заявки",
-  "pages.condo.ticket.filters.TicketType.common": "Обычные",
+  "pages.condo.ticket.filters.TicketType.all": "Все",
+  "pages.condo.ticket.filters.TicketType.own": "Мои",
   "pages.condo.ticket.filters.TicketType.favorite": "Избранные",
   "pages.condo.ticket.filters.Organization": "Организация",
   "pages.condo.ticket.filters.isResidentContact": "Житель/не житель",
@@ -644,7 +647,7 @@
   "pages.condo.ticket.index.EmergenciesLabel": "Аварийные",
   "pages.condo.ticket.index.WarrantiesLabel": "Гарантийные",
   "pages.condo.ticket.index.ReturnedLabel": "Возвращенные",
-  "pages.condo.ticket.index.PageTitle": "Все заявки",
+  "pages.condo.ticket.index.PageTitle": "Заявки",
   "pages.condo.ticket.index.PaidLabel": "Платные",
   "pages.condo.ticket.index.ResetFilters": "Сбросить",
   "pages.condo.ticket.index.CancelSelectedTicket": "Отменить выделение",
@@ -1173,6 +1176,12 @@
   "ticket.status.DEFERRED.name": "Отложена",
   "ticket.status.DEFERRED.until.name": "Отложена до {deferredUntil}",
   "ticket.status.CLOSED.name": "Закрыта",
+  "ticket.status.OPEN.many": "Открытые",
+  "ticket.status.IN_PROGRESS.many": "В работе",
+  "ticket.status.DECLINED.many": "Отмененные",
+  "ticket.status.COMPLETED.many": "Выполненные",
+  "ticket.status.DEFERRED.many": "Отложенные",
+  "ticket.status.CLOSED.many": "Закрытые",
   "ticket.source.EMAIL.name": "Эл. почта (e-mail)",
   "ticket.source.MOBILE_APP.name": "Приложение жителя",
   "ticket.source.REMOTE_SYSTEM.name": "Государственный портал",
@@ -1357,6 +1366,7 @@
   "Contact.NotFound.Message": "Контакта с данным ID не существует или же это контакт не вашей огранизации",
   "Contact": "Житель",
   "TicketsByContact": "Заявки от жителя",
+  "TicketsCount": "{ticketsCount, plural, one {# заявка} few {# заявки} many {# заявок} other {# заявок}}",
   "MoreTicketsLeft": "Ещё {ticketsLeft, plural, one {# заявка} few {# заявки} many {# заявок} other {# заявок}}",
   "Contact.NoTicketOnAddress": "Заявок от жителя по этому адресу нет",
   "EditingContact": "Редактирование жителя",
